# financial-analysis-backend

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
financial_analysis_backend/: account.py  backtest.py  data_type.py  database.py  dataset.py
financial_analysis_backend/metrics/: metric.py
financial_analysis_backend/notebooks/: Untitled.ipynb
financial_analysis_backend/scripts/: create_tables.py  test.py
financial_analysis_backend/strategies/: buy_and_hold.py  moving_average_crossover.py  strategy.py
